refactor: Fix some code smells